<?xml version="1.0"?>
<package format="3">
  <name>yolo26_ros2</name>
  <version>0.1.0</version>
  <description>YOLO26 object detector node for ROS 2 Humble (rclpy), publishing vision_msgs/Detection2DArray.</description>

  <maintainer email="you@example.com">tidbots</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

